# ocean-project

./: CMakeLists.txt  README.md
include/: algae.hpp  herbivore.hpp  predator.hpp
include/utils/: logger.hpp  random.hpp  resource_wrapper.hpp
src/: algae.cpp  algae.hpp  entity.hpp  herbivore.cpp  herbivore.hpp  main.cpp  ocean.cpp  ocean.hpp  predator.cpp  predator.hpp
src/utils/: logger.cpp
